--- a/publications.qmd
+++ b/publications.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Publications"
+title: "Things I wrote"
 ---
 
 ```{=html}
@@ -34,6 +34,18 @@ If you do not have access, please reach out via email (gaetano.scaduto\@unimib.i
 -   Scaduto, G. (2025). Politicultural Linking: Inferences between Political and Apolitical Traits. Accepted in Public Opinion Quarterly.
 
     -   Slideshow available <i class="fas fa-download pr-1 fa-fw"></i> [here](presentations/PL_presentation.pdf){target="_blank"}.
+    -   Preprint available [here](https://osf.io/preprints/socarxiv/zvcx2_v1).
+
+-   [Decadri, S., Mancosu, M., Negri, F., Scaduto, G.](https://doi.org/10.1177/19401612251339107) Aligning Emotions: A Comparative Analysis of Text and Imagery by European Party Leaders on Instagram. The International Journal of
+    Press/Politics.
+
+    -   Yet one another of my "communication" stream of research around politicians' Instagram profile content
+
+-   [Respi, C., Gui, M., Scaduto, G., Serini, M., Pizzul, D., Gerosa, T., & Lutz, C. (2024).](https://doi.org/10.1177/ 08944393251341201) Lower
+    Cynicism, Not Higher Literacy, Promotes Protective Behavior: Exploring the “privacy exception”
+    in the Digital Inequality Framework. Social Science Computer Review.
+
+    -   A paper about the factors affecting privacy protection behavior online, linked to the "VDATA" project I collaborated with in 2023. In this aper, I dealt with the analysis together with Tiziano Gerosa, using structural equation models (with lavaan!). Super fun!
 
 -   [Scaduto, G, Negri, F. (2024)](https://www.rivisteweb.it/doi/10.3270/115244). The Pundit Paradox: Exploring the Mismatch between Supply and Demand in Italian Political Talk Show Guests. Comunicazione Politica.
 
@@ -91,15 +103,19 @@ If you do not have access, please reach out via email (gaetano.scaduto\@unimib.i
 
 ## Under review
 
--   Decadri, S., Mancosu, M., Negri, F., Scaduto, G. A comparative analysis of the visual and textual strategies of European politicians on Instagram. R&R in International Journal of Press/Politics.
+-   Scaduto, G., Negri, F., Decadri, S. It’s the Homophily, Stupid: How Apolitical Similarities Affect
+    Political Conversations. A Cross-Country Dynamic Parallel Experiment. Under review in Political
+    Behavior.
 
--   Respi, C., Gui, M., Legnante, G., Scaduto, G., Serini, M., Pizzul, D., & Gerosa, T. Privacy protection as an exception in the digital inequality framework (and why this is not good news). R&R in Social Science Computer Review.
+    -   Preprint available [here](https://osf.io/preprints/socarxiv/6j8nr_v1).
+
+-   Tsoulou-Malakoudi, A., Goovaerts, I., Scaduto, G., Van Erkel, P., Walgrave, S. Political others are
+    perceived as non-politically different. Under review in European Journal of Political Research.
+
+-   Decadri, S., Negri, F., Scaduto, G. Visual Conjoint Experiments in Social-Scientific Research: A
+    Semi-Systematic Review and a Protocol Blueprint for Cross-Country Applications. Submitted.
 
 ## Working Papers
-
--   Scaduto, G., Negri, F., Decadri, S. Talk the Talk, Walk the Walk: How Apolitical Similarities Affect Political Conversations. A Dynamic Parallel Conjoint Experiment in Four EU Countries.
-
--   Decadri, S, Negri, F., Scaduto, G. Visual Conjoint Experiments in Social-Scientific Research: A Semi-Systematic Review and a Protocol Blueprint for Cross-Country Applications
 
 -   Decadri, S., Negri, F., Scaduto, G. A Visual Conjoint Experiment on Ideological Inferences from Politicians’ Instagram Profiles.
 
