--- a/cv.qmd
+++ b/cv.qmd
@@ -20,11 +20,11 @@ title: "CV"
 </style>
 ```
 
-<p><i class="fas fa-download pr-1 fa-fw"></i><a href=academic_cv.pdf target=_blank> Click here to download my Academic CV</a>.</p>
+<p><i class="fas fa-download pr-1 fa-fw"></i><a href=academic_cv.pdf target=_blank> Click here to download my Academic CV (usually up to date)</a>.</p>
 
-<p><i class="fas fa-download pr-1 fa-fw"></i><a href=industry_cv.pdf target=_blank> Click here to download my Industry CV</a>.</p>
+<p><i class="fas fa-download pr-1 fa-fw"></i><a href=industry_cv.pdf target=_blank> Click here to download my Industry CV (last update, spring 2025)</a>.</p>
 
-<p><i class="fas fa-download pr-1 fa-fw"></i><a href=europass_cv.pdf target=_blank> Click here to download my CV in Europass format</a>.</p>
+<p><i class="fas fa-download pr-1 fa-fw"></i><a href=europass_cv.pdf target=_blank> Click here to download my CV in Europass format (last update, spring 2025)</a>.</p>
 
 <!-- You can also download the cv <a href="https://github.com/gaetanoscaduto/cv/tree/main/cv_pdf/cv.pdf">here</a> -->
 
